--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -60,7 +60,7 @@
         else
         {
             <li class="nav-item">
-                <a href="@Url.Action("Index", "Cart")"><img src="~/Images/ShoppingCart.png" width="20"/></a>
+                <a href="@Url.Action("Index", "Cart")"><img src="~/Images/ShoppingCart1.png" width="40"/></a>
             </li>
         }
     </ul>
