Create New naar Nieuwe Categorie Aanmaken veranderd

--- a/Views/CategoryList/Index.cshtml
+++ b/Views/CategoryList/Index.cshtml
@@ -8,7 +8,7 @@
     <h2>Product Categorieën</h2>
     <hr>
     <p>
-        <a href="@Url.Action("Index", "products")">Nieuw Categorie Aanmaken</a>
+        <a href="@Url.Action("Index", "products")">Nieuwe Categorie Aanmaken</a>
     </p>
     <table id="table" style="border-radius: 3px;">
         <thead>
