--- a/Views/Products/Index.cshtml
+++ b/Views/Products/Index.cshtml
@@ -8,7 +8,7 @@
     <h2>Product Categorieën</h2>
 
     <p>
-        <a asp-action="Create">Create New</a>
+        <a asp-action="Create">Nieuwe Categorie Aanmaken</a>
     </p>
     <table class="table">
         <thead>
