--- a/Views/UserManagement/ResetUserPassword.cshtml
+++ b/Views/UserManagement/ResetUserPassword.cshtml
@@ -5,7 +5,7 @@
 <div class="pageRoot">
 
      <form asp-action="ResetUserPassword" method="post">
-            <h4>Update user Password</h4>
+            <h4>Verander de wachtwoord van gebruiker</h4>
              @switch (ViewBag.resultMsg)
                 {
                     case UserManagementController.ResultMessage.error:
@@ -42,13 +42,13 @@
                 <input asp-for="Password" class="form-control" />
                 <span asp-validation-for="Password" class="text-danger"></span>
             </div>
-            <button  class="btn btn-success" value="Send link"  onclick="location.href='@Url.Action("ResetUserPassword", "UserManagement") %>'" >
+            <button  class="btn btn-primary" value="Send link"  onclick="location.href='@Url.Action("ResetUserPassword", "UserManagement") %>'" >
                     Wachtwoord resetten
             </button>
      </form>
       <hr>
 
-            <h4>Of.. Stuur een link aan de gebruiker</h4>
+            <h4>Stuur een link naar de gebruiker</h4>
         <form asp-action="sendEmailToUser" method="post">
           <input asp-for="UserId" type="hidden" />
             <input asp-for="Email" type="hidden" />
