--- a/Areas/Identity/Pages/Account/Manage/ChangePassword.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/ChangePassword.cshtml
@@ -11,17 +11,17 @@
         <form id="change-password-form" method="post">
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Input.OldPassword"></label>
+                <label asp-for="Input.OldPassword">Huidige wachtwoord</label>
                 <input asp-for="Input.OldPassword" class="form-control" />
                 <span asp-validation-for="Input.OldPassword" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Input.NewPassword"></label>
+                <label asp-for="Input.NewPassword">Nieuwe wachtwoord</label>
                 <input asp-for="Input.NewPassword" class="form-control" />
                 <span asp-validation-for="Input.NewPassword" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Input.ConfirmPassword"></label>
+                <label asp-for="Input.ConfirmPassword">Bevestig nieuwe wachtwoord</label>
                 <input asp-for="Input.ConfirmPassword" class="form-control" />
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
