--- a/Views/Cart/sendOrderMail.cshtml
+++ b/Views/Cart/sendOrderMail.cshtml
@@ -6,7 +6,7 @@
 @using (Html.BeginForm("EmailOrder", "Cart", FormMethod.Post))
 {
    
-    <h2>U bent niet ingelogd, vul de volginde gegevens in!</h2>
+    <h2>U bent niet ingelogd, vul de volgende gegevens in!</h2>
     <hr>
    
             <div class="form-group">
