--- a/Views/UserManagement/updateInfoAdmin.cshtml
+++ b/Views/UserManagement/updateInfoAdmin.cshtml
@@ -74,7 +74,7 @@
                 <input asp-for=" Email" class="form-control" />
                 <span asp-validation-for=" Email" class="text-danger"></span>
             </div>
-             <input type="submit" class="btn btn-success" value="Opslaan" />
+             <input type="submit" class="btn btn-primary" value="Opslaan" />
           
 
         </form>
