Moved edit categorie link to admin category list
Signed-off-by: Okan <okanemeni@outlook.com>

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -30,10 +30,9 @@
             {
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Admin</a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="@Url.Action("Create", "Products")">Maak product soort aan</a>
+                    <a class="dropdown-item" href="@Url.Action("Create", "Products")">Maak categorie aan</a>
                     <a class="dropdown-item" href="@Url.Action("Create2", "Products")">Voeg product toe</a>
-                    <a class="dropdown-item" href="@Url.Action("ChooseProductsoort", "Products")">Bewerk productsoort</a>
-                    <a class="dropdown-item" href="@Url.Action("Index", "UploadFiles")">Voeg meerdere producten</a>
+                    <a class="dropdown-item" href="@Url.Action("Index", "UploadFiles")">Voeg meerdere producten toe</a>
                     <a class="dropdown-item" href="@Url.Action("Index", "CategoryList")">Overzicht Product Categorieën</a>
                     <a class="dropdown-item" href="@Url.Action("Index", "ProductList")">Overzicht Producten</a>
                     <div class="dropdown-divider"></div>
